# 2BitMatMul

./: CMakeLists.txt  README.md  check_energy_usage.sh  compile_cuda.sh  compile_omp.sh  compile_serial.sh  cuda.cu  cuda_matmul  energy.out  main.cpp  main_omp.cpp  max_pwr.txt  my_executable  naive_speed_test.py  omp.cpp  omp_matmul  serial.cpp  serial.hpp  serial_matmul  set_omp_settings.sh  test
